--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -1,9 +1,12 @@
 FROM node:18-alpine
-WORKDIR /app
+WORKDIR /my-app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
+
+RUN npm install -g serve
+CMD serve -s build -l 3000
 
 # FROM nginx:1.22.1-alpine
 # WORKDIR /usr/share/nginx/html
