--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -3,10 +3,10 @@ WORKDIR /my-app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
 
-RUN npm install -g serve
-CMD serve -s build -l 3000
+EXPOSE 3000
+#RUN npm run build
+RUN npm start
 
 # FROM nginx:1.22.1-alpine
 # WORKDIR /usr/share/nginx/html
